specify repos for new workflows

--- a/.github/workflows/check-type-sizes.yml
+++ b/.github/workflows/check-type-sizes.yml
@@ -7,6 +7,7 @@ jobs:
     name: Process sizes (win64, ${{ matrix.desc }})
     uses: DFHack/dfhack/.github/workflows/build-windows.yml@develop
     with:
+      structures_repo: ${{ matrix.repo }}
       structures_ref: ${{ matrix.ref }}
       artifact-name: sizes-Windows-64-${{ matrix.desc }}
       platform-files: false
@@ -17,8 +18,10 @@ jobs:
       matrix:
         include:
         - desc: old
+          repo: ${{ github.event.pull_request.base.repo }}
           ref: ${{ github.base_ref }}
         - desc: new
+          repo: ${{ github.repository }}
           ref: ${{ github.ref }}
     secrets: inherit
 
@@ -26,6 +29,7 @@ jobs:
     name: Process sizes (linux64, ${{ matrix.desc }})
     uses: DFHack/dfhack/.github/workflows/build-linux.yml@develop
     with:
+      structures_repo: ${{ matrix.repo }}
       structures_ref: ${{ matrix.ref }}
       artifact-name: sizes-Linux-64-${{ matrix.desc }}
       platform-files: false
@@ -36,8 +40,10 @@ jobs:
       matrix:
         include:
         - desc: old
+          repo: ${{ github.event.pull_request.base.repo }}
           ref: ${{ github.base_ref }}
         - desc: new
+          repo: ${{ github.repository }}
           ref: ${{ github.ref }}
     secrets: inherit
 
