fix repo name dereference

--- a/.github/workflows/check-type-sizes.yml
+++ b/.github/workflows/check-type-sizes.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         include:
         - desc: old
-          repo: ${{ github.event.pull_request.base.repo }}
+          repo: ${{ github.event.pull_request.base.repo.name }}
           ref: ${{ github.base_ref }}
         - desc: new
           repo: ${{ github.repository }}
@@ -40,7 +40,7 @@ jobs:
       matrix:
         include:
         - desc: old
-          repo: ${{ github.event.pull_request.base.repo }}
+          repo: ${{ github.event.pull_request.base.repo.name }}
           ref: ${{ github.base_ref }}
         - desc: new
           repo: ${{ github.repository }}
