--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
   test:
     uses: DFHack/dfhack/.github/workflows/test.yml@develop
     with:
-      dfhack_repo: ${{ github.event_name == 'push' && format('{0}/dfhack', github.repository_owner) || github.event.pull_request.base.repo }}
+      dfhack_repo: ${{ github.event_name == 'push' && format('{0}/dfhack', github.repository_owner) || github.event.pull_request.base.repo.name }}
       dfhack_ref: ${{ (((github.base_ref || github.ref_name) == 'master') && 'develop' || (github.base_ref || github.ref_name)) }}
       structures_repo: ${{ github.repository }}
       structures_ref: ${{ github.ref }}
@@ -47,7 +47,7 @@ jobs:
   docs:
     uses: DFHack/dfhack/.github/workflows/build-linux.yml@develop
     with:
-      dfhack_repo: ${{ github.event_name == 'push' && format('{0}/dfhack', github.repository_owner) || github.event.pull_request.base.repo }}
+      dfhack_repo: ${{ github.event_name == 'push' && format('{0}/dfhack', github.repository_owner) || github.event.pull_request.base.repo.name }}
       dfhack_ref: ${{ (((github.base_ref || github.ref_name) == 'master') && 'develop' || (github.base_ref || github.ref_name)) }}
       structures_repo: ${{ github.repository }}
       structures_ref: ${{ github.ref }}
