--- a/.github/workflows/comment-pr.yml
+++ b/.github/workflows/comment-pr.yml
@@ -21,11 +21,7 @@ jobs:
       id: format
       run: |
         set -ex
-        body="$(jq --raw-output .comment comment-info.json)"
-        body="${body//'%'/'%25'}"
-        body="${body//$'\n'/'%0A'}"
-        body="${body//$'\r'/'%0D'}"
-        echo body="$body" >>$GITHUB_OUTPUT
+        jq --raw-output .comment comment-info.json >>$GITHUB_OUTPUT
 
         echo "COMMENT_SEARCH=$(jq --raw-output .comment_search comment-info.json)" >> $GITHUB_ENV
         echo "COMMENT_PR_NUMBER=$(jq --raw-output .pr_number comment-info.json)" >> $GITHUB_ENV
