add missing include dir for xml-dump-type-sizes

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -15,6 +15,7 @@ if(BUILD_XMLDUMP)
     )
     add_executable(xml-dump-type-sizes dump-type-sizes.cpp)
     add_dependencies(xml-dump-type-sizes generate_headers)
+    target_include_directories(xml-dump-type-sizes PRIVATE ${dfapi_SOURCE_DIR}/include)
     if(INSTALL_XMLDUMP)
         install(TARGETS xml-dump-type-sizes DESTINATION .)
     endif()
